@@ -3,7 +3,7 @@
  *
  * This program is open source software licensed under the 
  * Eclipse Public License ver. 1
-*/
+ */
 
 /**
  * @author pmuldoon
@@ -50,24 +50,36 @@ public class RPMExportPage_2 extends WizardPage implements Listener {
 
 	// Patch Fields
 	private Text patchTag;
+
 	private Text patchChangeLog;
+
 	private Text patchChangeLogstamp;
+
 	private boolean first_spec = true;
+
 	private String path_to_specfile_save = null;
+
 	private String last_gettext = ""; //$NON-NLS-1$
+
 	private ArrayList patch_names;
+
 	private boolean firstTag = true;
+
 	private boolean patchTagError;
+
+	private final String valid_char_list = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-"; //$NON-NLS-1$
+
 	static final String file_sep = System.getProperty("file.separator"); //$NON-NLS-1$
-	
+
 	/**
 	 * @see java.lang.Object#Object()
-	 *
+	 * 
 	 * Constructor for RPMExportPage class
 	 */
 	public RPMExportPage_2() {
-		super(Messages.getString("RPMExportPage.Export_SRPM"), //$NON-NLS-1$
-		Messages.getString("RPMExportPage.Export_SRPM_from_project"), null); //$NON-NLS-1$ //$NON-NLS-2$
+		super(
+				Messages.getString("RPMExportPage.Export_SRPM"), //$NON-NLS-1$
+				Messages.getString("RPMExportPage.Export_SRPM_from_project"), null); //$NON-NLS-1$ //$NON-NLS-2$
 		setDescription(Messages.getString("RPMExportPage_2.0")); //$NON-NLS-1$
 		patch_names = new ArrayList();
 	}
@@ -90,7 +102,6 @@ public class RPMExportPage_2 extends WizardPage implements Listener {
 		populatePatchInfo();
 	}
 
-
 	/**
 	 * Method populatePatchInfo
 	 *
@@ -108,7 +119,7 @@ public class RPMExportPage_2 extends WizardPage implements Listener {
 		SimpleDateFormat df = new SimpleDateFormat("E MMM dd yyyy"); //$NON-NLS-1$
 
 		patchChangeLogstamp.setText("* " + df.format(today) + //$NON-NLS-1$
-			" -- " + userName + " <" + userEmail + ">");  //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				" -- " + userName + " <" + userEmail + ">"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 		patchChangeLog.setText("- "); //$NON-NLS-1$
 	}
 
@@ -121,143 +132,158 @@ public class RPMExportPage_2 extends WizardPage implements Listener {
 		Group group = new Group(parent, SWT.NONE);
 		group.setLayout(new GridLayout());
 		group.setText(Messages.getString("RPMExportPage.Patch_Options")); //$NON-NLS-1$
-		group.setLayoutData(new GridData(GridData.GRAB_HORIZONTAL |
-				GridData.HORIZONTAL_ALIGN_FILL));
+		group.setLayoutData(new GridData(GridData.GRAB_HORIZONTAL
+				| GridData.HORIZONTAL_ALIGN_FILL));
 
 		Composite composite = new Composite(group, SWT.NONE);
 
 		GridLayout layout = new GridLayout();
 		layout.numColumns = 2;
 		composite.setLayout(layout);
-		composite.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_FILL |
-				GridData.GRAB_HORIZONTAL));
-		
+		composite.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_FILL
+				| GridData.GRAB_HORIZONTAL));
+
 		// Listen for changes to the patch tag field so we can make sure
 		// this tag has not been used before
 		ModifyListener trapTag = new ModifyListener() {
-			public void modifyText(ModifyEvent e)  {
+			public void modifyText(ModifyEvent e) {
 				if (firstTag) {
 					patch_names = getPatchNames(RPMExportPage.getSpecFilePath());
 					firstTag = false;
 				}
-				
+
 				patchTagError = false;
-				// Does it have any spaces
-				if (patchTag.getText().lastIndexOf(" ") != -1) { //$NON-NLS-1$
-					setErrorMessage(Messages.getString("RPMExportPage_2.1")); //$NON-NLS-1$
-					patchTagError = true;
-					handleEvent(null);
-					return;
-				}
-				// Is the patch tag unique? (That is, if there are any patch tags.)
-				if (!patch_names.isEmpty()) {
-					for (int i = 0; i < patch_names.size(); i++) {
-						if (patchTag.getText().equals((String) patch_names.get(i))) {
+				// Does it have any spaces or special characters
+				if (patchTag.getText().length() != 0) {
+					for (int i = patchTag.getText().length(); i > 0; i--) {
+						if (valid_char_list.lastIndexOf(patchTag.getText()
+								.substring(i - 1,i)) == -1) {
+							setErrorMessage(Messages
+									.getString("RPMExportPage_2.1")); //$NON-NLS-1$
 							patchTagError = true;
-							setErrorMessage(Messages.getString("RPMExportPage_2.3")); //$NON-NLS-1$
 							handleEvent(null);
 							return;
 						}
 					}
-					setErrorMessage(null);
-					setDescription(Messages.getString("RPMExportPage_2.0")); //$NON-NLS-1$
-					handleEvent(null);
+					// Is the patch tag unique? (That is, if there are any patch
+					// tags.)
+					if (!patch_names.isEmpty()) {
+						for (int i = 0; i < patch_names.size(); i++) {
+							if (patchTag.getText().equals(
+									(String) patch_names.get(i))) {
+								patchTagError = true;
+								setErrorMessage(Messages
+										.getString("RPMExportPage_2.3")); //$NON-NLS-1$
+								handleEvent(null);
+								return;
+							}
+						}
+					}
 				}
+				setErrorMessage(null);
+				setDescription(Messages.getString("RPMExportPage_2.0")); //$NON-NLS-1$
+				handleEvent(null);
 			}
-		} ;  
+		};
 
 		ModifyListener trapPatch = new ModifyListener() {
-		
-				public void modifyText(ModifyEvent e) {
-					handleEvent(null);
-				}
-			};
 
-		GridData patchTagGridData = new GridData(GridData.HORIZONTAL_ALIGN_FILL |
-			GridData.GRAB_HORIZONTAL);
-		new Label(composite, SWT.NONE).setText(Messages.getString(
-				"RPMExportPage.Patch_Tag")); //$NON-NLS-1$
+			public void modifyText(ModifyEvent e) {
+				handleEvent(null);
+			}
+		};
+
+		GridData patchTagGridData = new GridData(GridData.HORIZONTAL_ALIGN_FILL
+				| GridData.GRAB_HORIZONTAL);
+		new Label(composite, SWT.NONE).setText(Messages
+				.getString("RPMExportPage.Patch_Tag")); //$NON-NLS-1$
 		patchTag = new Text(composite, SWT.BORDER);
-		patchTag.setToolTipText(Messages.getString(
-				"RPMExportPage.toolTip_Patch_Tag")); //$NON-NLS-1$
+		patchTag.setToolTipText(Messages
+				.getString("RPMExportPage.toolTip_Patch_Tag")); //$NON-NLS-1$
 
 		patchTag.setLayoutData(patchTagGridData);
 
 		GridData pChangelogStampGridData = new GridData(
-			GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL);
-		new Label(composite, SWT.NONE).setText(Messages.getString(
-				"RPMExportPage.Patch_Changelog_Stamp")); //$NON-NLS-1$
+				GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL);
+		new Label(composite, SWT.NONE).setText(Messages
+				.getString("RPMExportPage.Patch_Changelog_Stamp")); //$NON-NLS-1$
 
 		patchChangeLogstamp = new Text(composite, SWT.BORDER);
 		patchChangeLogstamp.setLayoutData(pChangelogStampGridData);
 		patchTag.addModifyListener(trapTag);
 		patchChangeLogstamp.addModifyListener(trapPatch);
-		patchChangeLogstamp.setToolTipText(Messages.getString(
-				"RPMExportPage.toolTip_Changelog_Stamp")); //$NON-NLS-1$
+		patchChangeLogstamp.setToolTipText(Messages
+				.getString("RPMExportPage.toolTip_Changelog_Stamp")); //$NON-NLS-1$
 
-		
-
-		new Label(composite, SWT.NONE).setText(Messages.getString(
-				"RPMExportPage.Patch_Changelog")); //$NON-NLS-1$
+		new Label(composite, SWT.NONE).setText(Messages
+				.getString("RPMExportPage.Patch_Changelog")); //$NON-NLS-1$
 
 		KeyListener patchChangelogListener = new KeyListener() {
-				public void keyPressed(KeyEvent e) {
-					handleEvent(null);
+			public void keyPressed(KeyEvent e) {
+				handleEvent(null);
+			}
+
+			public void keyReleased(KeyEvent e) {
+				handleEvent(null);
+				if (e.keyCode == 13) {
+					if (patchChangeLog.getCaretPosition() == patchChangeLog
+							.getCharCount())
+						patchChangeLog.append("- "); //$NON-NLS-1$
+					else if (patchChangeLog.getText(
+							patchChangeLog.getCaretPosition() - 1,
+							patchChangeLog.getCaretPosition() - 1).equals("\n")) //$NON-NLS-1$
+						patchChangeLog.insert("- "); //$NON-NLS-1$
 				}
-				public void keyReleased(KeyEvent e) {
-					handleEvent(null);
-					if (e.keyCode == 13) {
-						if (patchChangeLog.getCaretPosition() == patchChangeLog.getCharCount())
-							patchChangeLog.append("- "); //$NON-NLS-1$
-						else
-							if (patchChangeLog.getText(patchChangeLog.getCaretPosition()-1,
-								patchChangeLog.getCaretPosition()-1).equals("\n")) //$NON-NLS-1$
-									patchChangeLog.insert("- "); //$NON-NLS-1$
-					}
-				}
-			};
+			}
+		};
 
 		GridData pChangelogGridData = new GridData(
-			GridData.HORIZONTAL_ALIGN_FILL |
-			GridData.GRAB_HORIZONTAL);
-			
+				GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL);
+
 		patchChangeLog = new Text(composite, SWT.BORDER | SWT.MULTI);
 		pChangelogGridData.heightHint = 7 * patchChangeLog.getLineHeight();
 		patchChangeLog.setLayoutData(pChangelogGridData);
 		patchChangeLog.addKeyListener(patchChangelogListener);
-		patchChangeLog.setToolTipText(Messages.getString(
-				"RPMExportPage.toolTip_Changelog")); //$NON-NLS-1$
+		patchChangeLog.setToolTipText(Messages
+				.getString("RPMExportPage.toolTip_Changelog")); //$NON-NLS-1$
 
-	
 	}
 
 	/**
-		 * canFinish()
-		 * 
-		 * Hot validation. Called to determine whether Finish
-		 * button can be set to true
-		 * @return boolean. true if finish can be activated
-		 */
+	 * canFinish()
+	 * 
+	 * Hot validation. Called to determine whether Finish
+	 * button can be set to true
+	 * @return boolean. true if finish can be activated
+	 */
 	public boolean canFinish() {
-		
+
 		// Is the patch tag empty
 		if (patchTag.getText().equals("")) { //$NON-NLS-1$
+			setErrorMessage(null);
+			setDescription(Messages.getString("RPMExportPage_2.5")); //$NON-NLS-1$
 			return false;
 		}
-		
-//		 Is tag a duplicate or have spaces?
+
+		//		 Is tag a duplicate or have spaces?
 		if (patchTagError) {
 			return false;
 		}
-		
-			else		{
-				setErrorMessage(null);
-				setDescription(Messages.getString("RPMExportPage_2.2")); //$NON-NLS-1$
-			}
+
+		else {
+			setErrorMessage(null);
+			setDescription(Messages.getString("RPMExportPage_2.4")); //$NON-NLS-1$
+		}
 
 		// Is the Changelog fields empty?
-		if (patchChangeLog.getText().equals("- ")) { //$NON-NLS-1$
+		if (patchChangeLog.getText().equals("- ") | patchChangeLog.getText().equals("") | //$NON-NLS-1$ //$NON-NLS-2$
+				patchChangeLog.getText().equals("-")) {
+			setDescription(Messages.getString("RPMExportPage_2.4")); //$NON-NLS-1$
 
+			return false;
+		} else if (patchTag.getText().equals("")) {
+			setErrorMessage(null);
+			setDescription(Messages.getString("RPMExportPage_2.5")); //$NON-NLS-1$
 			return false;
 		}
 
@@ -266,7 +292,10 @@ public class RPMExportPage_2 extends WizardPage implements Listener {
 
 			return false;
 		}
-		
+
+		setErrorMessage(null);
+		setDescription(Messages.getString("RPMExportPage_2.2")); //$NON-NLS-1$
+
 		return true;
 	}
 
@@ -283,92 +312,92 @@ public class RPMExportPage_2 extends WizardPage implements Listener {
 	public void handleEvent(Event e) {
 		setPageComplete(canFinish());
 	}
-	
-	private String getHostName()
-	 {
-	 	String hostname;
-		  try {
-			  hostname = java.net.InetAddress.getLocalHost().getHostName();
-		  } catch (UnknownHostException e) {
-			  return ""; //$NON-NLS-1$
-		  }
-		  // Trim off superflous stuff from the hostname
-		  int firstdot = hostname.indexOf("."); //$NON-NLS-1$
-		  int lastdot = hostname.lastIndexOf("."); //$NON-NLS-1$
-		  // If the two are equal, no need to trim name
-		  if (firstdot == lastdot) {
-		  	return hostname;
-		  }
-		  String hosttemp = ""; //$NON-NLS-1$
-		  String hosttemp2 = hostname;
-		  while (firstdot != lastdot) {
-		  	hosttemp = hosttemp2.substring(lastdot) + hosttemp;
-		  	hosttemp2 = hostname.substring(0,lastdot);
-		  	lastdot = hosttemp2.lastIndexOf("."); //$NON-NLS-1$
-		  }
-		  return hosttemp.substring(1);
-	 }
-	 /*
-	  * This method gets the path to the spec file that will be used to create
-	  * the rpm and gleans the patch names from it.
-	  * @returns populated ArrayList if spec file found, null ArrayList if not
-	  */ 
-	 
-	 private ArrayList getPatchNames(String path_to_specfile) {
-	
-	 	File f = new File(path_to_specfile);
-	 	if (!f.exists()) {
-	 		return null;
-	 	}
+
+	private String getHostName() {
+		String hostname;
+		try {
+			hostname = java.net.InetAddress.getLocalHost().getHostName();
+		} catch (UnknownHostException e) {
+			return ""; //$NON-NLS-1$
+		}
+		// Trim off superflous stuff from the hostname
+		int firstdot = hostname.indexOf("."); //$NON-NLS-1$
+		int lastdot = hostname.lastIndexOf("."); //$NON-NLS-1$
+		// If the two are equal, no need to trim name
+		if (firstdot == lastdot) {
+			return hostname;
+		}
+		String hosttemp = ""; //$NON-NLS-1$
+		String hosttemp2 = hostname;
+		while (firstdot != lastdot) {
+			hosttemp = hosttemp2.substring(lastdot) + hosttemp;
+			hosttemp2 = hostname.substring(0, lastdot);
+			lastdot = hosttemp2.lastIndexOf("."); //$NON-NLS-1$
+		}
+		return hosttemp.substring(1);
+	}
+
+	/*
+	 * This method gets the path to the spec file that will be used to create
+	 * the rpm and gleans the patch names from it.
+	 * @returns populated ArrayList if spec file found, null ArrayList if not
+	 */
+
+	private ArrayList getPatchNames(String path_to_specfile) {
+
+		File f = new File(path_to_specfile);
+		if (!f.exists()) {
+			return null;
+		}
 		ArrayList patch_names = new ArrayList();
 		try {
-					FileReader sp_file = new FileReader(path_to_specfile);
-					StreamTokenizer st = new StreamTokenizer(sp_file);
+			FileReader sp_file = new FileReader(path_to_specfile);
+			StreamTokenizer st = new StreamTokenizer(sp_file);
 
-					// Make sure numbers, colons and percent signs are considered valid
-					st.wordChars('a','z');
-					st.wordChars('A','Z');
-					st.wordChars(':', ':');
-					st.wordChars('0', '9');
-					st.wordChars('%', '%');
-					st.wordChars('{', '}');
-					st.wordChars('-', '-');
-					st.wordChars('/', '/');
-					st.wordChars('=','=');
-					st.wordChars('.','.');
-					st.wordChars('_','_');
-					st.eolIsSignificant(true);
-					boolean found_patch = false;
-            
-					String new_word;
-					int token = st.nextToken();
-						while (token != StreamTokenizer.TT_EOF) {
-							token = st.nextToken();
+			// Make sure numbers, colons and percent signs are considered valid
+			st.wordChars('a', 'z');
+			st.wordChars('A', 'Z');
+			st.wordChars(':', ':');
+			st.wordChars('0', '9');
+			st.wordChars('%', '%');
+			st.wordChars('{', '}');
+			st.wordChars('-', '-');
+			st.wordChars('/', '/');
+			st.wordChars('=', '=');
+			st.wordChars('.', '.');
+			st.wordChars('_', '_');
+			st.eolIsSignificant(true);
+			boolean found_patch = false;
 
-							switch (token) {
+			String new_word;
+			int token = st.nextToken();
+			while (token != StreamTokenizer.TT_EOF) {
+				token = st.nextToken();
 
-							case StreamTokenizer.TT_WORD:
-								new_word = st.sval;
-								if (new_word.startsWith("Patch")) { //$NON-NLS-1$
-									found_patch = true;
-									break;
-								}
-								if (new_word.endsWith(".patch") && found_patch) {  //$NON-NLS-1$
-									int i = new_word.lastIndexOf("-"); //$NON-NLS-1$
-									int j = new_word.lastIndexOf(".patch"); //$NON-NLS-1$
-									patch_names.add(new_word.substring(i+1,j));
-									found_patch = false;
-									break;
-								}
-								default:
-								  found_patch = false;
-								  break;
-							}
-						}
-					sp_file.close();
-				} catch (IOException e) {
-					return null;
+				switch (token) {
+
+				case StreamTokenizer.TT_WORD:
+					new_word = st.sval;
+					if (new_word.startsWith("Patch")) { //$NON-NLS-1$
+						found_patch = true;
+						break;
+					}
+					if (new_word.endsWith(".patch") && found_patch) { //$NON-NLS-1$
+						int i = new_word.lastIndexOf("-"); //$NON-NLS-1$
+						int j = new_word.lastIndexOf(".patch"); //$NON-NLS-1$
+						patch_names.add(new_word.substring(i + 1, j));
+						found_patch = false;
+						break;
+					}
+				default:
+					found_patch = false;
+					break;
 				}
-			return patch_names;
-	 }
+			}
+			sp_file.close();
+		} catch (IOException e) {
+			return null;
+		}
+		return patch_names;
+	}
 }
