@@ -109,9 +109,11 @@ RPMExportPage.No_c/c++_projects_found_2=---> No c/c++ projects found <---
 RPMExportPage.SPEC_file=SPEC file
 RPMExportPage.Browse=Browse...
 RPMExportPage_2.0=Enter patch/changelog information for spec file
-RPMExportPage_2.1=Patch Tag cannot have a space\!
+RPMExportPage_2.1=Patch Tag cannot have a special character\!
 RPMExportPage_2.2=Enter patch/changelog information for spec file
 RPMExportPage_2.3=Patch tag is not unique\!
+RPMExportPage_2.4=Enter changelog entry info
+RPMExportPage_2.5=Enter a patch tag name
 RPMExportPage.Generate_patch=Generate patch (against previously imported SRPM)
 RPMExportPage.YourName=YourName
 RPMExportPage.your@mail.com=mail.com
